--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="top">
                 <div class="top_left">
                     <h1 class="title">
-                        Discover, and collect
+                        Discover, and collect <br>
                         Digital Art  NFTs
                     </h1>
 
@@ -81,6 +81,37 @@
                 </div>
                 <div class="top-right">
                     <img width="100%" src="./img/top-image.jpg">
+                </div>
+            </div>
+
+            <div class="flex jc-sb mt-120 features_block ai-c">
+                <div>
+                    <p class="title">
+                        The amazing NFT art <br>
+                        of the world here
+                    </p>
+                </div>
+            
+                <div class="w-250">
+                    <p class="title_small">
+                        Fast Transaction
+                    </p>
+                    <p class="subtitle_small mt-20">
+                        Lorem ipsum dolor sit amet,
+                        consectetur adipiscing elit. 
+                        Aliquam etiam viverra 
+                        tellus imperdiet.
+                    </p>
+                </div>
+
+                <div class="w-250">
+                    <p class="title_small">
+                        Growth Transaction
+                    </p>
+                    <p class="subtitle_small mt-20">
+                        Lorem ipsum dolor sit amet, consectetur 
+                        adipiscing elit. Aliquam etiam viverra tellus
+                    </p>
                 </div>
             </div>
         </main>
