--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                     </p>
                 </div>
             
-                <div class="w-250">
+                <div class="w-250 feature_item">
                     <p class="title_small">
                         Fast Transaction
                     </p>
@@ -104,7 +104,7 @@
                     </p>
                 </div>
 
-                <div class="w-250">
+                <div class="w-250 feature_item">
                     <p class="title_small">
                         Growth Transaction
                     </p>
